Fixed Horizontal Scrolling

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -13,12 +13,12 @@
   .header {
     display: flex;
     margin-top: 28px;
-    padding-left: 27px;
     padding-bottom: 32px;
-    width: 100%;
+    max-width: 100%;
   }
   .header__logo {
     width: 126px;
     height: 24px;
+    padding-left: 27px;
   }
 }
