--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,7 +2,6 @@
   background-color: black;
   color: white;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 .page__section {
@@ -16,7 +15,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 0 20px;
+  max-width: 100%;
+  padding: 0;
 }
 
 @media screen and (max-width: 760px) {
